--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react-dom": "^18.3.1",
         "tailwindcss": "^3.4.17",
         "typescript": "^5.0.2",
         "vite": "^6.0"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1"
     }
 }
